--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,9 +1,10 @@
-#Sat Jan 29 11:01:33 JST 2011
+#Sat Jan 29 11:09:10 JST 2011
 eclipse.preferences.version=1
 encoding//src/main.py=utf-8
 encoding//src/paper.py=utf-8
 encoding//src/player.py=utf-8
 encoding//src/pywaz/core.py=utf-8
 encoding//src/pywaz/graphic.py=utf-8
+encoding//src/pywaz/utils.py=utf-8
 encoding//src/scenes.py=utf-8
 encoding//src/settings.py=utf-8
